--- a/index.html
+++ b/index.html
@@ -8,30 +8,28 @@
     <title>Portflow</title>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Portflow</h1>
-        <nav class="">
-            <ul>
-                <li>Home</li>
-                <li>Blog</li>
-                <li>Valores</li>
-                <li>Portfolio</li>
-                <li>Contato</li>
-            </ul>
-        </nav>
+        <section class="header-container">
+            <h1>Portflow</h1>
+            <nav>
+                <ul class="nav-list">
+                    <li>Home</li>
+                    <li>Blog</li>
+                    <li>Valores</li>
+                    <li>Portfolio</li>
+                    <li>Contato</li>
+                </ul>
+            </nav>
+        </section>
     </header>
     <main>
         <section class="blue-background">
-            <figure>
-                <img src="img/laranja azul recorte.png" alt="Laranja cortada sobre fundo azul">
-                <figcaption>
-                    <h2>Imagine, Discuta, Desenhe.</h2>
-                    <p>FALE CONOSCO</p>
-                </figcaption>
-            </figure>
+            <h2>Imagine, Discuta, Desenhe.</h2>
+            <p>FALE CONOSCO</p>
         </section>
         <section class="img-matrix">
             <section class="row-large-screen">
