--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Portflow</title>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap');
+    </style>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -20,7 +26,7 @@
                     <li>Home</li>
                     <li>Blog</li>
                     <li>Valores</li>
-                    <li>Portfolio</li>
+                    <li><span class="active">Portfolio</span></li>
                     <li>Contato</li>
                 </ul>
             </nav>
