Alterações no footer, adiconou-se uma span

--- a/index.html
+++ b/index.html
@@ -71,17 +71,18 @@
         </section>
     </main>
     <footer>
-        <section class="icons-container">
-            <ion-icon name="logo-facebook"></ion-icon>
-            <ion-icon name="logo-twitter"></ion-icon>
-            <ion-icon name="logo-instagram"></ion-icon>
-            <ion-icon name="telescope-outline"></ion-icon>
-            <ion-icon name="logo-whatsapp"></ion-icon>
-            <ion-icon name="logo-youtube"></ion-icon>
+        <section class="footer-container">
+            <section class="icons-container">
+                <ion-icon name="logo-facebook"></ion-icon>
+                <ion-icon name="logo-twitter"></ion-icon>
+                <ion-icon name="logo-instagram"></ion-icon>
+                <ion-icon name="telescope-outline"></ion-icon>
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                <ion-icon name="logo-youtube"></ion-icon>
+            </section>
+            <p class="copyright">Todos os direitos reservados dummy text.</p>
+            <p><span class="active">Copyright</span></p>
         </section>
-        <p class="copyright">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ea tenetur temporibus error
-            mollitia unde non quibusdam quod magnam, soluta enim. Facere ipsa magnam dignissimos nam nemo id tempora
-            provident.</p>
     </footer>
 </body>
 
