Adicionando um container para o h2 e p

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
     </header>
     <main>
         <section class="blue-background">
-            <h2>Imagine, Discuta, Desenhe.</h2>
-            <p>FALE CONOSCO</p>
+            <section class="text-position">
+                <h2>Imagine, Discuta, Desenhe.</h2>
+                <p>FALE CONOSCO</p>
+            </section>
         </section>
         <section class="img-matrix">
             <section class="row-large-screen">
