Adicionando menu hambúrguer e fazendo seu css

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 </ul>
             </nav>
         </section>
+        <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
     </header>
     <main>
         <section class="blue-background">
