Adicionando link 'topo'

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </header>
     <main>
-        <section class="blue-background">
+        <section class="blue-background" id="top">
             <section class="text-position">
                 <h2>Imagine, Discuta, Desenhe.</h2>
                 <p>FALE CONOSCO</p>
@@ -90,6 +90,7 @@
             <p class="copyright">Todos os direitos reservados dummy text.</p>
             <p><span class="active">Copyright</span></p>
         </section>
+        <a href="#top" class="back-to-header">Topo</a>
     </footer>
 </body>
 
