Estilizando o link para o topo no footer

--- a/index.html
+++ b/index.html
@@ -87,10 +87,14 @@
                 <ion-icon name="logo-whatsapp"></ion-icon>
                 <ion-icon name="logo-youtube"></ion-icon>
             </section>
-            <p class="copyright">Todos os direitos reservados dummy text.</p>
-            <p><span class="active">Copyright</span></p>
+            <section class="text-container">
+                <section class="p-container">
+                    <p class="copyright">Todos os direitos reservados dummy text.</p>
+                    <p><span class="active">Copyright</span></p>
+                </section>
+                <a href="#top" class="back-to-header">Topo</a>
+            </section>
         </section>
-        <a href="#top" class="back-to-header">Topo</a>
     </footer>
 </body>
 
