Adicionando animação ao hover no h2

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <section class="blue-background" id="top">
             <section class="text-position">
-                <h2>Imagine, Discuta, Desenhe.</h2>
+                <h2><div class="rotate">Imagine</div>,<div class="rotate">Discuta</div>, <div class="rotate">Desenhe</div>.</h2>
                 <p>FALE CONOSCO</p>
             </section>
         </section>
