--- a/index.html
+++ b/index.html
@@ -14,49 +14,68 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap');
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header>
-        <section class="header-container">
-            <h1>Portflow</h1>
-            <nav>
-                <ul class="nav-list">
-                    <li>Home</li>
-                    <li>Blog</li>
-                    <li>Valores</li>
-                    <li><span class="active">Portfolio</span></li>
-                    <li>Contato</li>
-                </ul>
-            </nav>
-        </section>
-        <div class="burger">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-        </div>
+        <nav class="navbar navbar-expand-md bg-white fixed-top">
+            <div class="container">
+                <a class="navbar-brand fw-bold" href="#">Portflow</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Valores</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contato</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
-    <main>
+    <main class="mt-5">
         <section class="blue-background" id="top">
-            <section class="text-position">
-                <h2><div class="rotate">Imagine</div>,<div class="rotate">Discuta</div>, <div class="rotate">Desenhe</div>.</h2>
+            <section class="text-position container text-white">
+                <h2>
+                    <div class="rotate">Imagine</div>,<div class="rotate">Discuta</div>, <div class="rotate">Desenhe
+                    </div>.
+                </h2>
                 <p>FALE CONOSCO</p>
             </section>
         </section>
-        <section class="img-matrix">
-                    <img src="img/NoPath - Copia (20).png" alt="Erva Mate">
-                    <img src="img/NoPath - Copia (22).png" alt="Pão de queijo">
-                    <img src="img/NoPath - Copia (21).png" alt="Pasta de amendoim">
-                    <img src="img/mokup telas.png" alt="Telas">
-                    <img src="img/NoPath - Copia (25).png" alt="Discos">
-                    <img src="img/NoPath - Copia (27).png" alt="Caneca">
-                    <img src="img/NoPath - Copia (29).png" alt="Computadores">
-                    <img src="img/NoPath - Copia (23).png" alt="Barra de cereais">
-                    <img src="img/NoPath - Copia (31).png" alt="Telefone">
-                    <img src="img/NoPath - Copia (32).png" alt="iPad café">
-                    <img src="img/NoPath - Copia (34).png" alt="Coisas sobre uma mesa">
-                    <img src="img/NoPath - Copia (33).png" alt="Polaroids">
+        <section class="img-matrix row m-auto container mt-3 mb-3">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (20).png" alt="Erva Mate">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (22).png" alt="Pão de queijo">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (21).png"
+                alt="Pasta de amendoim">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/mokup telas.png" alt="Telas">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (25).png" alt="Discos">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (27).png" alt="Caneca">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (29).png" alt="Computadores">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (23).png"
+                alt="Barra de cereais">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (31).png" alt="Telefone">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (32).png" alt="iPad café">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (34).png"
+                alt="Coisas sobre uma mesa">
+            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (33).png" alt="Polaroids">
         </section>
     </main>
     <footer>
@@ -78,6 +97,8 @@
             </section>
         </section>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
