--- a/index.html
+++ b/index.html
@@ -22,16 +22,21 @@
     <header>
         <nav class="navbar navbar-expand-md bg-white fixed-top">
             <div class="container">
-                <a class="navbar-brand fw-bold" href="#">Portflow</a>
+                <button class="navbar-toggler invisible" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand fw-bold m-auto" href="#">Portflow</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Blog</a>
@@ -40,7 +45,7 @@
                             <a class="nav-link" href="#">Valores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
+                            <a class="nav-link active" href="#">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contato</a>
@@ -50,7 +55,7 @@
             </div>
         </nav>
     </header>
-    <main class="mt-5">
+    <main class="mt-5" id="main">
         <section class="blue-background" id="top">
             <section class="text-position container text-white">
                 <h2>
@@ -60,40 +65,49 @@
                 <p>FALE CONOSCO</p>
             </section>
         </section>
-        <section class="img-matrix row m-auto container mt-3 mb-3">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (20).png" alt="Erva Mate">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (22).png" alt="Pão de queijo">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (21).png"
-                alt="Pasta de amendoim">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/mokup telas.png" alt="Telas">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (25).png" alt="Discos">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (27).png" alt="Caneca">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (29).png" alt="Computadores">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (23).png"
-                alt="Barra de cereais">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (31).png" alt="Telefone">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (32).png" alt="iPad café">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (34).png"
-                alt="Coisas sobre uma mesa">
-            <img class="col-md-6 col-lg-3 g-md-3 mb-sm-1 g-lg-2" src="img/NoPath - Copia (33).png" alt="Polaroids">
+        <section class="img-matrix m-auto container">
+            <div class="row g-md-3 g-2 mt-3 mb-3">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (20).png" alt="Erva Mate">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (22).png" alt="Pão de queijo">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (21).png"
+                    alt="Pasta de amendoim">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/mokup telas.png" alt="Telas">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (25).png" alt="Discos">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (27).png" alt="Caneca">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (29).png" alt="Computadores">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (23).png"
+                    alt="Barra de cereais">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (31).png" alt="Telefone">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (32).png" alt="iPad café">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (34).png"
+                    alt="Coisas sobre uma mesa">
+                <img class="col-md-6 col-lg-3 img-fluid" src="img/NoPath - Copia (33).png" alt="Polaroids">
+            </div>
         </section>
     </main>
-    <footer>
-        <section class="footer-container">
-            <section class="icons-container">
-                <ion-icon name="logo-facebook"></ion-icon>
-                <ion-icon name="logo-twitter"></ion-icon>
-                <ion-icon name="logo-instagram"></ion-icon>
-                <ion-icon name="telescope-outline"></ion-icon>
-                <ion-icon name="logo-whatsapp"></ion-icon>
-                <ion-icon name="logo-youtube"></ion-icon>
-            </section>
-            <section class="text-container">
-                <section class="p-container">
-                    <p class="copyright">Todos os direitos reservados dummy text.</p>
-                    <p><span class="active">Copyright</span></p>
+    <footer class="bg-light mt-4 pt-5 pb-5">
+        <section class="container">
+            <section class="row">
+                <section class="col-md-4 text-center text-md-start m-0">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                    <ion-icon name="logo-twitter"></ion-icon>
+                    <ion-icon name="logo-instagram"></ion-icon>
+                    <ion-icon name="telescope-outline"></ion-icon>
+                    <ion-icon name="logo-whatsapp"></ion-icon>
+                    <ion-icon name="logo-youtube"></ion-icon>
                 </section>
-                <a href="#top" class="back-to-header">Topo</a>
+                <section class="col-8 col-md-7">
+                    <div class="d-flex justify-content-between align-items-center   ">
+                        <span class="fw-bold">Copyright</span>
+                        <p class="w-75 copyright m-0 text-center">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Architecto
+                            accusamus praesentium corporis id dolorem dicta adipisci aspernatur? Quos, incidunt
+                            mollitia?</p>
+                    </div>
+                </section>
+                <div class="col-4 text-center d-flex d-md-none">
+                    <a href="#main" class="link rounded-pill">Topo</a>
+                </div>
             </section>
         </section>
     </footer>
