--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-md bg-white fixed-top">
-            <div class="container">
+            <div class="container-fluid container-md">
                 <button class="navbar-toggler invisible" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
