Enxugando css novamente

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         </nav>
     </header>
     <main class="mt-5" id="main">
-        <section class="blue-background" id="top">
+        <section class="blue-background d-flex flex-column justify-content-center" id="top">
             <section class="text-position container text-white">
-                <h2>
+                <h2 class="d-flex flex-wrap fw-bold ms-0">
                     <div class="rotate">Imagine</div>,<div class="rotate">Discuta</div>, <div class="rotate">Desenhe
                     </div>.
                 </h2>
-                <p>FALE CONOSCO</p>
+                <p class="m-0">FALE CONOSCO</p>
             </section>
         </section>
         <section class="img-matrix m-auto container">
@@ -105,7 +105,7 @@
                             mollitia?</p>
                     </div>
                 </section>
-                <div class="col-4 text-center d-flex d-md-none">
+                <div class="col-4 d-flex d-md-none justify-content-center align-items-center">
                     <a href="#main" class="link rounded-pill">Topo</a>
                 </div>
             </section>
